[package]
name = "simple_compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.28"
niffler = "2.5.0"
rayon = "1.8.0"
seq_io = "0.3.2"
