[package]
name = "simple_compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.28"
niffler = "2.5.0"
rayon = "1.8.0"
seq_io = "0.3.2"
nuc2bit = {git = "https://github.com/natir/nuc2bit.git"}
rand = "0.8.5"
bit-set = "0.5.3"
bit-vec = "0.6.3"
num-traits = "0.2.18"
bitvec = "1.0.1"
hashbrown = "0.14.3"
miette = "5"
zstd = "0.13.1"
needletail = "0.5.1"
parking_lot = "0.12.3"
crossbeam = "0.8.4"

[build-dependencies]
miette = { version = "5", features = ["fancy"] }

[profile.release]
debug = true
strip = false
