[package]
name = "kloe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.28"
niffler = "2.5.0"
rayon = "1.8.0"
seq_io = "0.3.2"
nuc2bit = {git = "https://github.com/natir/nuc2bit.git"}
rand = "0.8.5"
bit-set = "0.5.3"
bit-vec = "0.6.3"
num-traits = "0.2.18"
bitvec = "1.0.1"
miette = "5"
zstd = "0.13.1"
parking_lot = "0.12.3"
crossbeam = "0.8.4"
indexmap = "2.5.0"
dashmap = "6.1.0"
minimizer-iter = "1.2.1"
itertools = "0.14.0"
zeekstd = "0.6.1"
bio = "3.0.0"
simd-minimizers = "2.2.0"
rlimit = "0.10.2"
threadpool = "1.8.1"
num_cpus = "1.17.0"
num-format = "0.4"
anyhow = "1.0"
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
xz2 = "0.1"
tempfile = "3.23.0"

[build-dependencies]
miette = { version = "5", features = ["fancy"] }

[profile.release]
debug = true
strip = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
